#1 create core functionality for starters